--- a/chesswindow.ui
+++ b/chesswindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="A_2">
@@ -37,7 +37,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="A_3">
@@ -50,7 +50,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="A_4">
@@ -63,7 +63,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="A_5">
@@ -76,7 +76,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="A_6">
@@ -89,7 +89,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="A_7">
@@ -102,7 +102,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="A_8">
@@ -115,7 +115,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="B_1">
@@ -128,7 +128,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="B_2">
@@ -141,7 +141,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="B_3">
@@ -154,7 +154,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="B_4">
@@ -167,7 +167,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="B_5">
@@ -180,7 +180,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="B_6">
@@ -193,7 +193,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="B_7">
@@ -206,7 +206,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="B_8">
@@ -219,7 +219,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="C_1">
@@ -232,7 +232,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="C_2">
@@ -245,7 +245,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="C_3">
@@ -258,7 +258,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="C_4">
@@ -271,7 +271,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="C_5">
@@ -284,7 +284,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="C_6">
@@ -297,7 +297,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="C_7">
@@ -310,7 +310,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QPushButton" name="C_8">
@@ -323,7 +323,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string></string>
     </property>
    </widget>
     <widget class="QPushButton" name="D_1">
@@ -336,7 +336,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="D_2">
@@ -349,7 +349,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="D_3">
@@ -362,7 +362,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="D_4">
@@ -375,7 +375,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="D_5">
@@ -388,7 +388,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="D_6">
@@ -401,7 +401,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="D_7">
@@ -414,7 +414,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="D_8">
@@ -427,7 +427,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="E_1">
@@ -440,7 +440,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="E_2">
@@ -453,7 +453,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="E_3">
@@ -466,7 +466,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="E_4">
@@ -479,7 +479,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="E_5">
@@ -492,7 +492,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="E_6">
@@ -505,7 +505,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="E_7">
@@ -518,7 +518,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="E_8">
@@ -531,7 +531,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="F_1">
@@ -544,7 +544,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="F_2">
@@ -557,7 +557,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="F_3">
@@ -570,7 +570,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="F_4">
@@ -583,7 +583,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="F_5">
@@ -596,7 +596,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="F_6">
@@ -609,7 +609,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="F_7">
@@ -622,7 +622,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="F_8">
@@ -635,7 +635,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="G_1">
@@ -648,7 +648,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="G_2">
@@ -661,7 +661,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="G_3">
@@ -674,7 +674,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="G_4">
@@ -687,7 +687,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="G_5">
@@ -700,7 +700,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="G_6">
@@ -713,7 +713,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="G_7">
@@ -726,7 +726,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="G_8">
@@ -739,7 +739,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="H_1">
@@ -752,7 +752,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="H_2">
@@ -765,7 +765,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="H_3">
@@ -778,7 +778,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="H_4">
@@ -791,7 +791,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="H_5">
@@ -804,7 +804,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="H_6">
@@ -817,7 +817,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="H_7">
@@ -830,7 +830,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
     <widget class="QPushButton" name="H_8">
@@ -843,7 +843,7 @@
         </rect>
       </property>
       <property name="text">
-        <string>PushButton</string>
+        <string></string>
       </property>
     </widget>
   </widget>
