--- a/resourcechess.qrc
+++ b/resourcechess.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/new/prefix1">
+    <qresource prefix="/pieces/">
         <file>BlackCastle.png</file>
         <file>BlackHorse.png</file>
         <file>BlackKing.png</file>
