Add unknown piece (for debug)

--- a/resourcechess.qrc
+++ b/resourcechess.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/pieces/">
+    <qresource prefix="/pieces">
         <file>BlackCastle.png</file>
         <file>BlackHorse.png</file>
         <file>BlackKing.png</file>
@@ -12,5 +12,6 @@
         <file>WhitePawn.png</file>
         <file>WhiteQueen.png</file>
         <file>WhiteRook.png</file>
+        <file>PieceUnknown.png</file>
     </qresource>
 </RCC>
