rename pieces; add empty piece

--- a/resourcechess.qrc
+++ b/resourcechess.qrc
@@ -5,13 +5,14 @@
         <file>BlackKing.png</file>
         <file>BlackPawn.png</file>
         <file>BlackQueen.png</file>
-        <file>BlackRook.png</file>
+        <file>BlackBishop.png</file>
         <file>WhiteCastle.png</file>
         <file>WhiteHorse.png</file>
         <file>WhiteKing.png</file>
         <file>WhitePawn.png</file>
         <file>WhiteQueen.png</file>
-        <file>WhiteRook.png</file>
+        <file>WhiteBishop.png</file>
         <file>PieceUnknown.png</file>
+        <file>PieceNone.png</file>
     </qresource>
 </RCC>
