--- a/chesswindow.ui
+++ b/chesswindow.ui
@@ -850,7 +850,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>260</y>
+      <y>250</y>
       <width>601</width>
       <height>161</height>
      </rect>
@@ -861,7 +861,7 @@
        <colorrole role="WindowText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>0</red>
+          <red>255</red>
           <green>0</green>
           <blue>0</blue>
          </color>
@@ -1007,7 +1007,7 @@
        <colorrole role="WindowText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>0</red>
+          <red>255</red>
           <green>0</green>
           <blue>0</blue>
          </color>
@@ -1305,6 +1305,9 @@
     </property>
     <property name="text">
      <string>TextLabel</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
